# graph_moes

./: .gitignore  README  README.md  accuracy_histograms.ipynb  custom_encodings.py  download_ogbg_ppa.py  environment.yml  hyperparams.py  measure_smoothing.py  moe_gcn_gin_sweep.sh  moe_uni_gin_sweep.sh  pyproject.toml  run_graph_classification.py  run_graph_regression.py  upload_ogbg_ppa_to_cluster.sh
.github/workflows/: pytest.yml
.ipynb_checkpoints/: run_graph_classification-checkpoint.py
GraphRicciCurvature/: FormanRicci.py
bash_interface/cluster/: check_failed_jobs.sh  check_job_progress.sh  comprehensive_sweep.sh  comprehensive_sweep_encoding_moe.sh  comprehensive_sweep_moe_only.sh  comprehensive_sweep_parallel.sh  comprehensive_sweep_parallel_additional_data.sh  comprehensive_sweep_parallel_encodings.sh  comprehensive_sweep_parallel_no_slow.sh  comprehensive_sweep_parallel_skip.sh  compute_encodings.sh  compute_encodings_array.sh  compute_tmd_analysis.sh  compute_tmd_analysis_array.sh  download_graphbench_datasets.sh  download_ppa.sh  hyperparams_lookup.sh  moe_gcn_sweep.sh  moe_gcn_sweep_specified_params.sh  moe_uni_gin_sweep.sh  moe_unig_gin_sweep_specified_params.sh  monitor_sweep_jobs.sh  node_classification_pattern.sh  run_missing_combinations.sh
bash_interface/local/: download_graphbench_local.sh  moe_gcn_gin_sweep.sh  moe_uni_gin_sweep.sh
docs/: GGNN.md  TMD.md  hyperparameters.md  new_datasets.md  results.md
docs/datasets/: datasets_to_add.md  new_datasets.md
docs/harvard_cluster/: cluster_environments.md
experiments/: graph_classification.py  graph_regression.py
experiments/.ipynb_checkpoints/: graph_classification-checkpoint.py  graph_regression-checkpoint.py
jupyter_notebooks/: accuracy_histograms.ipynb
models/: complex_valued_layers.py  graph_model.py  graph_moe.py  graph_regression_model.py  layers.py  real_valued_layers.py
models/.ipynb_checkpoints/: complex_valued_layers-checkpoint.py  graph_model-checkpoint.py  graph_regression_model-checkpoint.py
results/: graph_classification.txt  graph_classification_GCN_LCP.csv  graph_classification_GCN_LDP.csv  graph_classification_GCN_None.csv  graph_classification_GIN_None.csv  graph_classification_MLP_None.csv  graph_classification_MoE_E_LCP.csv  graph_classification_MoE_E_LDP.csv  graph_classification_MoE_None.csv  graph_classification_SAGE_None.csv  graph_classification_Unitary_None.csv
results/4_layers/: collab_GCN_None_graph_dict.pickle  collab_MLP_None_graph_dict.pickle  enzymes_GCN_None_graph_dict.pickle  enzymes_GIN_None_graph_dict.pickle  enzymes_MLP_None_graph_dict.pickle  enzymes_MoE_None_graph_dict.pickle  imdb_GIN_None_graph_dict.pickle  imdb_MLP_None_graph_dict.pickle  mutag_GCN_None_graph_dict.pickle  mutag_GIN_None_graph_dict.pickle  mutag_MLP_None_graph_dict.pickle  mutag_MoE_None_graph_dict.pickle  mutag_Unitary_None_graph_dict.pickle  proteins_GIN_None_graph_dict.pickle  proteins_MLP_None_graph_dict.pickle  proteins_MoE_None_graph_dict.pickle  reddit_MLP_None_graph_dict.pickle
results/5_layers/: enzymes_MoE_None_graph_dict.pickle  mutag_MoE_None_graph_dict.pickle
results/6_layers/: enzymes_MoE_None_graph_dict.pickle  mutag_MoE_None_graph_dict.pickle  proteins_MoE_None_graph_dict.pickle
results/7_layers/: enzymes_MoE_None_graph_dict.pickle  mutag_MoE_None_graph_dict.pickle
scripts/: compute_encodings_for_datasets.py  compute_tmd_analysis.py  download_graphbench_cluster.py  download_peptides.py  generate_all_heterogeneity_profiles.py  generate_sorted_plots.py  interactive_heterogeneity_comparison.py  plot_label_distributions.py  plot_tmd_class_ratios.py  run_graph_classification.py  run_graph_regression.py  verify_dataset_consistency.py  visualize_examples.py
tests/: test_accuracies_monitoring.py  test_graph_moes.py  test_tmd.py  test_track_avg_accuracy_helpers.py  test_utils_attention.py  test_utils_measure_smoothing.py
tmd_results/: enzymes_class_ratios.csv  enzymes_tmd_matrix.npy  enzymes_tmd_stats.json  imdb-binary_class_ratios.csv  imdb-binary_tmd_stats.json  mutag_class_ratios.csv  mutag_tmd_matrix.npy  mutag_tmd_stats.json
(+60 files in other folders)
